# blog-test

./: .gitignore  Cargo.toml  database.db  diesel.toml
migrations/2024-07-14-164537_create_posts/: up.sql
migrations/2024-07-15-013905_create_user/: up.sql
src/: lib.rs  main.rs  schema.rs
src/error/: mod.rs
src/models/: mod.rs  post.rs  user.rs
src/routes/: mod.rs  posts.rs
src/routes/posts/: create_post.rs  delete_post.rs  get_post_by_id.rs  get_posts.rs  mod.rs  publish_post.rs
src/routes/users/: create_user.rs  delete_user.rs  get_user_by_id.rs  get_users.rs  mod.rs
