[package]
name = "actix-tests"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.8.0"
diesel = { version = "2.2.1", features = ["sqlite"] }
dotenvy = "0.15.7"
env_logger = "0.11.3"
log = "0.4.22"
serde = { version = "1.0.204", features = ["derive"] }
uuid = { version = "1.10.0", features = ["fast-rng", "macro-diagnostics", "v4"] }
