[package]
name = "actix-tests"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = { version = "4.8.0", features = ["openssl"] }
bcrypt = "0.15.1"
diesel = { version = "2.2.1", features = ["returning_clauses_for_sqlite_3_35", "sqlite"] }
dotenvy = "0.15.7"
env_logger = "0.11.3"
log = "0.4.22"
openssl = "0.10.64"
serde = { version = "1.0.204", features = ["derive"] }
thiserror = "1.0.63"
uuid = { version = "1.10.0", features = ["fast-rng", "macro-diagnostics", "serde", "v4"] }

[dev-dependencies]
anyhow = "1.0.86"
